[project]
name = "pokemon-tcg-collection-manager-lmm-interface"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.10",
    "langchain-openai>=0.2.12",
    "openai>=1.57.0",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.8.2",
]
